@@ -14,6 +14,7 @@ import static org.mockito.Mockito.*;
 
 /**
  * Tests unitaires pour GrpcClientLoggingAspect.
+ * Version refactorisée sans boucles inutiles - Tests professionnels.
  */
 @DisplayName("GrpcClientLoggingAspect - Tests unitaires")
 class GrpcClientLoggingAspectTest {
@@ -22,6 +23,10 @@ class GrpcClientLoggingAspectTest {
     private Logger logger;
     private GrpcClientLoggingAspect aspect;
 
+    // Mocks réutilisables
+    private JoinPoint joinPoint;
+    private Signature signature;
+
     @BeforeEach
     void setUp() {
         logger = (Logger) LoggerFactory.getLogger(GrpcClientLoggingAspect.class);
@@ -29,8 +34,13 @@ class GrpcClientLoggingAspectTest {
         listAppender.start();
         logger.addAppender(listAppender);
         logger.setLevel(Level.DEBUG);
-        
+
         aspect = new GrpcClientLoggingAspect();
+
+        // Initialiser les mocks
+        joinPoint = mock(JoinPoint.class);
+        signature = mock(Signature.class);
+        when(joinPoint.getSignature()).thenReturn(signature);
     }
 
     @AfterEach
@@ -43,26 +53,13 @@ class GrpcClientLoggingAspectTest {
     // ========================================================================
 
     @Test
-    @DisplayName("Doit couvrir le pointcut grpcChannelShutdown")
-    void shouldCoverGrpcChannelShutdownPointcut() {
-        // Given / When
-        for (int i = 0; i < 100; i++) {
-            aspect.grpcChannelShutdown();
-        }
-        
-        // Then - Pas d'assertion nécessaire, juste couvrir le code
-        assertThat(true).isTrue();
-    }
+    @DisplayName("Doit couvrir les pointcuts")
+    void shouldCoverPointcuts() {
+        // Test des pointcuts (appels directs pour couverture)
+        aspect.grpcChannelShutdown();
+        aspect.grpcClientCalls();
 
-    @Test
-    @DisplayName("Doit couvrir le pointcut grpcClientCalls")
-    void shouldCoverGrpcClientCallsPointcut() {
-        // Given / When
-        for (int i = 0; i < 100; i++) {
-            aspect.grpcClientCalls();
-        }
-        
-        // Then - Pas d'assertion nécessaire, juste couvrir le code
+        // Coverage only - pas de boucles inutiles
         assertThat(true).isTrue();
     }
 
@@ -71,71 +68,62 @@ class GrpcClientLoggingAspectTest {
     // ========================================================================
 
     @Test
-    @DisplayName("Doit logger avant le shutdown du canal gRPC")
+    @DisplayName("Doit logger (INFO) avant le shutdown du canal gRPC")
     void shouldLogBeforeChannelShutdown() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeChannelShutdown(joinPoint);
-        }
+        aspect.logBeforeChannelShutdown(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC-CLIENT", "shutdown", "gRPC channel");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "shutdown", "gRPC channel");
     }
 
     @Test
-    @DisplayName("Doit logger après le shutdown réussi du canal gRPC")
+    @DisplayName("Doit logger (INFO) après le shutdown réussi du canal gRPC")
     void shouldLogAfterChannelShutdown() {
-        // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterChannelShutdown(joinPoint);
-        }
+        aspect.logAfterChannelShutdown(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC-CLIENT", "closed successfully");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "closed successfully");
     }
 
     @Test
-    @DisplayName("Doit logger les erreurs lors du shutdown du canal")
+    @DisplayName("Doit logger (ERROR) les erreurs lors du shutdown du canal")
     void shouldLogChannelShutdownError() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        
-        Exception[] exceptions = {
-            new RuntimeException("Channel error"),
-            new IllegalStateException("Invalid state"),
-            new InterruptedException("Interrupted")
-        };
+        Exception channelError = new RuntimeException("Channel error");
 
         // When
-        for (Exception ex : exceptions) {
-            for (int i = 0; i < 30; i++) {
-                aspect.logChannelShutdownError(joinPoint, ex);
-            }
-        }
+        aspect.logChannelShutdownError(joinPoint, channelError);
 
         // Then
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.ERROR);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "Error", "closing gRPC channel");
+    }
+
+    @Test
+    @DisplayName("Doit gérer différents types d'erreurs de shutdown")
+    void shouldHandleDifferentShutdownErrors() {
+        // Test avec IllegalStateException
+        aspect.logChannelShutdownError(joinPoint, new IllegalStateException("Invalid state"));
+
+        // Test avec InterruptedException
+        aspect.logChannelShutdownError(joinPoint, new InterruptedException("Interrupted"));
+
+        assertThat(listAppender.list).hasSize(2);
         assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getFormattedMessage)
-                .first()
-                .asString()
-                .contains("GRPC-CLIENT", "Error", "closing gRPC channel");
+                .allSatisfy(log -> assertThat(log.getLevel()).isEqualTo(Level.ERROR));
     }
 
     // ========================================================================
@@ -143,93 +131,69 @@ class GrpcClientLoggingAspectTest {
     // ========================================================================
 
     @Test
-    @DisplayName("Doit logger avant un appel RPC - isEmailNotConfirmed")
+    @DisplayName("Doit logger (INFO) avant un appel RPC 'isEmailNotConfirmed'")
     void shouldLogBeforeRpcCall_IsEmailNotConfirmed() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("isEmailNotConfirmed");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeRpcCall(joinPoint);
-        }
+        aspect.logBeforeRpcCall(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.INFO);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "Calling Members", "isEmailNotConfirmed");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "Calling Members", "isEmailNotConfirmed");
     }
 
     @Test
-    @DisplayName("Doit logger avant un appel RPC - autre méthode")
+    @DisplayName("Doit logger (DEBUG) avant un appel RPC générique")
     void shouldLogBeforeRpcCall_OtherMethod() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("someOtherMethod");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logBeforeRpcCall(joinPoint);
-        }
+        aspect.logBeforeRpcCall(joinPoint);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.DEBUG);
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.DEBUG);
     }
 
     @Test
-    @DisplayName("Doit logger après un appel RPC réussi - isEmailNotConfirmed")
+    @DisplayName("Doit logger (INFO) après un appel RPC réussi 'isEmailNotConfirmed'")
     void shouldLogAfterSuccessfulRpcCall_IsEmailNotConfirmed() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("isEmailNotConfirmed");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterSuccessfulRpcCall(joinPoint, true);
-        }
+        aspect.logAfterSuccessfulRpcCall(joinPoint, true);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.INFO);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "completed successfully", "isEmailNotConfirmed");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.INFO);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "completed successfully", "isEmailNotConfirmed");
     }
 
     @Test
-    @DisplayName("Doit logger après un appel RPC réussi - autre méthode")
+    @DisplayName("Doit logger (DEBUG) après un appel RPC réussi générique")
     void shouldLogAfterSuccessfulRpcCall_OtherMethod() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("anotherMethod");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logAfterSuccessfulRpcCall(joinPoint, null);
-        }
+        aspect.logAfterSuccessfulRpcCall(joinPoint, null);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.DEBUG);
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.DEBUG);
     }
 
     // ========================================================================
@@ -237,214 +201,144 @@ class GrpcClientLoggingAspectTest {
     // ========================================================================
 
     @Test
-    @DisplayName("Doit logger une erreur avec Unavailable dans le nom de classe")
-    void shouldLogRpcCallError_UnavailableInClassName() {
+    @DisplayName("Doit logger (ERROR) une erreur UNAVAILABLE")
+    void shouldLogRpcCallError_Unavailable() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("isEmailNotConfirmed");
-        
-        // Créer une exception avec Unavailable dans le nom de la classe
+
         class ServiceUnavailableError extends RuntimeException {
             public ServiceUnavailableError(String message) {
                 super(message);
             }
         }
-        
         Exception unavailableException = new ServiceUnavailableError("Service not available");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, unavailableException);
-        }
+        aspect.logRpcCallError(joinPoint, unavailableException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.ERROR);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "UNAVAILABLE", "isEmailNotConfirmed");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.ERROR);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "UNAVAILABLE", "isEmailNotConfirmed");
     }
 
     @Test
-    @DisplayName("Doit logger une erreur avec UNAVAILABLE en majuscules dans le nom de classe")
-    void shouldLogRpcCallError_UNAVAILABLEInClassName() {
+    @DisplayName("Doit logger (ERROR) une erreur avec UNAVAILABLE en majuscules dans le nom de classe")
+    void shouldLogRpcCallError_UnavailableUpperCase() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
-        when(signature.getName()).thenReturn("isEmailNotConfirmed");
+        when(signature.getName()).thenReturn("getMemberByEmail");
         
-        // Créer une exception avec UNAVAILABLE en majuscules dans le nom
-        class UNAVAILABLEError extends RuntimeException {
-            public UNAVAILABLEError(String message) {
+        class UNAVAILABLEException extends RuntimeException {
+            public UNAVAILABLEException(String message) {
                 super(message);
             }
         }
-        
-        Exception unavailableException = new UNAVAILABLEError("Service UNAVAILABLE");
+        Exception unavailableException = new UNAVAILABLEException("gRPC service is down");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, unavailableException);
-        }
+        aspect.logRpcCallError(joinPoint, unavailableException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.ERROR);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "UNAVAILABLE", "isEmailNotConfirmed");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.ERROR);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "UNAVAILABLE", "getMemberByEmail");
     }
 
     @Test
-    @DisplayName("Doit logger un timeout - Timeout dans le nom de classe")
+    @DisplayName("Doit logger (WARN) un Timeout")
     void shouldLogRpcCallError_Timeout() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("checkStatus");
-        
-        // Créer une exception dont le nom de classe contient "Timeout"
         Exception timeoutException = new java.util.concurrent.TimeoutException("Operation timed out");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, timeoutException);
-        }
+        aspect.logRpcCallError(joinPoint, timeoutException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.WARN);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "Timeout", "checkStatus");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.WARN);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "Timeout", "checkStatus");
     }
 
     @Test
-    @DisplayName("Doit logger un timeout - DEADLINE_EXCEEDED dans le nom de classe")
+    @DisplayName("Doit logger (WARN) un DEADLINE_EXCEEDED")
     void shouldLogRpcCallError_DeadlineExceeded() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("checkStatus");
-        
-        // Créer une exception personnalisée avec DEADLINE_EXCEEDED dans le nom
+
         class RequestDEADLINE_EXCEEDEDError extends RuntimeException {
             public RequestDEADLINE_EXCEEDEDError(String message) {
                 super(message);
             }
         }
-        
         Exception deadlineException = new RequestDEADLINE_EXCEEDEDError("Request timeout");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, deadlineException);
-        }
+        aspect.logRpcCallError(joinPoint, deadlineException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.WARN);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "Timeout", "checkStatus");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.WARN);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "Timeout", "checkStatus");
     }
 
     @Test
-    @DisplayName("Doit logger une IllegalArgumentException")
+    @DisplayName("Doit logger (WARN) une IllegalArgumentException")
     void shouldLogRpcCallError_IllegalArgument() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("validateEmail");
-        
         Exception illegalArgException = new IllegalArgumentException("Invalid email format");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, illegalArgException);
-        }
+        aspect.logRpcCallError(joinPoint, illegalArgException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.WARN);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "Invalid argument", "validateEmail");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.WARN);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "Invalid argument", "validateEmail");
     }
 
     @Test
-    @DisplayName("Doit logger une erreur générique")
+    @DisplayName("Doit logger (ERROR) une erreur générique")
     void shouldLogRpcCallError_Generic() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
         when(signature.getName()).thenReturn("someMethod");
-        
         Exception genericException = new RuntimeException("Some error");
 
         // When
-        for (int i = 0; i < 50; i++) {
-            aspect.logRpcCallError(joinPoint, genericException);
-        }
+        aspect.logRpcCallError(joinPoint, genericException);
 
         // Then
-        assertThat(listAppender.list)
-                .hasSizeGreaterThanOrEqualTo(1)
-                .extracting(ILoggingEvent::getLevel)
-                .contains(Level.ERROR);
-        
-        assertThat(listAppender.list.get(0).getFormattedMessage())
-                .contains("GRPC-CLIENT", "Error during", "someMethod");
+        assertThat(listAppender.list).hasSize(1);
+        ILoggingEvent log = listAppender.list.getFirst();
+
+        assertThat(log.getLevel()).isEqualTo(Level.ERROR);
+        assertThat(log.getFormattedMessage()).contains("GRPC-CLIENT", "Error during", "someMethod");
     }
 
     @Test
-    @DisplayName("Doit couvrir toutes les branches avec invocations massives")
-    void shouldCoverAllBranchesWithMassiveInvocations() {
+    @DisplayName("Doit couvrir tous les cas d'erreur")
+    void shouldCoverAllErrorCases() {
         // Given
-        JoinPoint joinPoint = mock(JoinPoint.class);
-        Signature signature = mock(Signature.class);
-        when(joinPoint.getSignature()).thenReturn(signature);
+        when(signature.getName()).thenReturn("testMethod");
 
-        // When - Tester tous les cas de figure massivement
-        String[] methodNames = {"isEmailNotConfirmed", "otherMethod", "validateToken"};
-        Exception[] exceptions = {
-            new RuntimeException("UNAVAILABLE error"),
-            new RuntimeException("Timeout occurred"),
-            new IllegalArgumentException("Bad arg"),
-            new NullPointerException("Null value")
-        };
+        // Test différents types d'erreurs (pas de boucles inutiles)
+        aspect.logRpcCallError(joinPoint, new RuntimeException("UNAVAILABLE error"));
+        aspect.logRpcCallError(joinPoint, new RuntimeException("Timeout occurred"));
+        aspect.logRpcCallError(joinPoint, new IllegalArgumentException("Bad arg"));
+        aspect.logRpcCallError(joinPoint, new NullPointerException("Null value"));
 
-        for (String methodName : methodNames) {
-            when(signature.getName()).thenReturn(methodName);
-            
-            for (int i = 0; i < 100; i++) {
-                aspect.logBeforeRpcCall(joinPoint);
-                aspect.logAfterSuccessfulRpcCall(joinPoint, "result");
-                
-                for (Exception ex : exceptions) {
-                    aspect.logRpcCallError(joinPoint, ex);
-                }
-            }
-        }
-
-        // Then
-        assertThat(listAppender.list).hasSizeGreaterThan(100);
+        // Then - Vérifier qu'il y a 4 logs
+        assertThat(listAppender.list).hasSize(4);
     }
 }
